homepage spacing fixes

--- a/src/sections/Home/AgsSlider/AgsSlider.scss
+++ b/src/sections/Home/AgsSlider/AgsSlider.scss
@@ -15,18 +15,6 @@
       @media #{$sm} {
         font-size: 22px;
       }
-      @media #{$xl} {
-        margin-top: -8rem;
-      }
-      @media #{$xxl} {
-        margin-top: -8rem;
-      }
-      @media #{$_3xl} {
-        margin-top: -8rem;
-      }
-      @media #{$_5xl} {
-        margin-top: -8rem;
-      }
     }
     @-webkit-keyframes ripple-white {
       0% {
